# Article-Repository-Digdir

./: .gitignore  Justfile  README.md  principal_component_plot.png.html  pyproject.toml
src/digdir/vectorEmbedings/: app_sample_data.py  readme.md  utils.py  visualize_embeddings.py
tests/: test_main.py
