[tool.poetry]
name = "digdir"
version = "0.0.1"
authors = ["Maged Helmy <maged@newcode.ai>"]
readme = "README.md"
description = "Digitaliseringsdirektoratet - Norwegian Digitalisation Agency"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"
pytest = "^8.0.1"
chromadb = "^0.4.22"
langchain-openai = "^0.0.6"
langchain-community = "^0.0.21"
langchain = "^0.1.8"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
python-dotenv = "^1.0.1"
adjusttext = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/magedhelmy1/digdir"
Issues = "https://github.com/magedhelmy1/digdir/issues"