[tool.poetry]
name = "digdir"
version = "0.0.1"
authors = ["Maged Helmy <maged@newcode.ai>"]
readme = "README.md"
description = "Digitaliseringsdirektoratet - Norwegian Digitalisation Agency"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.2.0"
pytest = "^8.0.1"
chromadb = "^0.4.22"
langchain-openai = "^0.0.6"
langchain-community = "^0.0.21"
langchain = "^0.1.8"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
python-dotenv = "^1.0.1"
adjusttext = "^1.0.4"
plotly = "^5.19.0"
torch = "^2.2.1"
torchvision = "^0.17.1"
tensorboard = "^2.16.2"
tensorflow = "^2.15.0.post1"
tensorflow-datasets = "^4.9.4"
streamlit = "^1.31.1"
watchdog = "^4.0.0"
psutil = "^5.9.8"
streamlit-tensorboard = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/magedhelmy1/digdir"
Issues = "https://github.com/magedhelmy1/digdir/issues"